* Rewrite structural pseudo class resolver in the compiler to better match QSA behavior and results. [Diego Perini]

* Ensure element.type exists before calling toLowerCase() on it for `:enabled` and `:disabled` pseudos. [jddalton]

* Rename `NATIVE_QSAPI` to `NATIVE_QSA` and test for querySelectorAll() instead of querySelector(). [jddalton]

* Avoid resetting current element in the first iteration of compileGroup() and rename `native_api` to `select_simple`. [Diego Perini, jddalton]

* Remove duplicate `context` variable and use `base` instead. [Diego Perini]

* Add `NATIVE_HAS_FOCUS` variable. [Diego Perini]

* Switch remaining `element.nodeType==1` to `element.nodeName.charCodeAt(0)>64`. [Diego Perini]

* Tweak regexp used in the CSS3 `:checked` pseudo, ensure the element.form exists and element.type checks in `:enabled`, `:disabled`, and `:checked` are case-insensitive, remove `isLink()` from the `:disabled` check, and remove element.type checks from `:focus`. [jddalton]

* Switch to `element.nodeName.charCodeAt(0)` instead of `element.nodeName.charAt(0)`. [jddalton]

* Remove `in` operator checks on control elements and test hasFocus() method exists before using it. [Diego Perini, jddalton]

* Avoid checking for strict booleans on control elements, they are actually strings if set in the source HTML as attribute values. [Diego Perini]

* Reduce code in normalize() and make forEachCall() use `++i` and replace repeated string in compileSelector() with `strEdgeSpace`. [jddalton]

* Ensure escaped commas are not parsed and simplify the `reSplitGroup` and `reSplitToken` regexps. [jddalton]

* Move Prototype unit test adapter into its own file. [jddalton]

* Cleanup jQuery adapters and ensure compiled variable `j` is the index of the current element being processed. [jddalton]

* Ensure querySelectorAll() is skipped on non-html documents. [jddalton]

* Fix byId() performance regression. [jddalton]
